--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="xam">#5e5e5e</color>
     <color name="Dark">#010101</color>
     <color name="notYellow">#d3bc67</color>
+    <color name="circle_color_border">#5e5e5e</color>
+    <color name="border_background">#010101</color>
 </resources>
