notify xong cơ bản @@

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="Dark">#010101</color>
     <color name="notYellow">#d3bc67</color>
     <color name="circle_color_border">#5e5e5e</color>
+    <color name="circle_notify_color_border">#7F7F7F</color>
     <color name="border_background">#010101</color>
 </resources>
