--- a/app/src/main/res/layout/activity_notify.xml
+++ b/app/src/main/res/layout/activity_notify.xml
@@ -20,6 +20,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:padding="16dp"
         android:background="@drawable/border_background">
 
@@ -58,7 +59,6 @@
             android:id="@+id/arrow_right1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/arrow_right"
             android:src="@drawable/ic_arrow_right"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"/>
@@ -67,6 +67,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
         android:padding="16dp"
         android:background="@drawable/border_background">
         <ImageView
@@ -104,9 +105,153 @@
             android:id="@+id/arrow_right2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/arrow_right"
             android:src="@drawable/ic_arrow_right"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"/>
     </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="1dp"
+        android:background="#CBCBCB">
+
+        <TextView
+            android:id="@+id/new_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:paddingStart="20dp"
+            android:text="Mới"
+            android:textStyle="bold"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:background="@drawable/notify_border">
+        <ImageView
+            android:id="@+id/ic_notify1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/ic_notify"
+            android:background="@drawable/circle_notify_background"/>
+
+        <TextView
+            android:id="@+id/news2"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:text="Tin tức"
+            android:textStyle="bold"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="1dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"/>
+
+        <TextView
+            android:id="@+id/text_notify1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chưa có tin tức nào"
+            android:textSize="16sp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:background="@drawable/notify_border">
+        <ImageView
+            android:id="@+id/ic_notify2"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/ic_notify"
+            android:background="@drawable/circle_notify_background"/>
+
+        <TextView
+            android:id="@+id/news3"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:text="Tin tức"
+            android:textStyle="bold"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="1dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"/>
+
+        <TextView
+            android:id="@+id/text_notify2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chưa có tin tức nào"
+            android:textSize="16sp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="1dp"
+        android:paddingStart="0dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:background="@drawable/notify_border">
+        <ImageView
+            android:id="@+id/ic_notify"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="5dp"
+            android:src="@drawable/ic_notify"
+            android:background="@drawable/circle_notify_background"/>
+
+        <TextView
+            android:id="@+id/news1"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:text="Tin tức"
+            android:textStyle="bold"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="1dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"/>
+
+        <TextView
+            android:id="@+id/text_notify3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chưa có tin tức nào"
+            android:textSize="16sp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"/>
+
+    </RelativeLayout>
+
+
 </LinearLayout>
