--- a/app/src/main/res/drawable/circle_notify_background.xml
+++ b/app/src/main/res/drawable/circle_notify_background.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <solid android:color="@android:color/transparent" />
-    <solid android:color="#EBE53B" />
+    <solid android:color="#EBFF84" />
     <stroke
         android:width="1dp"
         android:color="@color/circle_notify_color_border"/>
