--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".customer.fragments.HomeFragment">
+    android:layout_height="match_parent">
 
 
     <LinearLayout
@@ -61,7 +59,7 @@
                 android:layout_weight="1"/>
 
             <TextView
-                android:id="@+id/list_item"
+                android:id="@+id/goto_showroom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Xem tất cả"
