--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,6 +71,7 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/goto_showroom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0"
