--- a/app/src/main/res/navigation/nav_home_graph.xml
+++ b/app/src/main/res/navigation/nav_home_graph.xml
@@ -26,9 +26,16 @@
         tools:layout="@layout/fragment_support">
     </fragment>
 
+    <fragment
+        android:id="@+id/notify_fragment"
+        android:name="com.example.myandroidproject.customer.fragments.NotifyFragment"
+        android:label="fragment_nav_home"
+        tools:layout="@layout/fragment_notify">
+    </fragment>
+
     <action android:id="@+id/action_global_home" app:destination="@id/home" />
     <action android:id="@+id/in4_personal" app:destination="@id/in4" />
     <action android:id="@+id/action_global_support_fragment" app:destination="@id/support_fragment" />
-
+    <action android:id="@+id/action_global_notify_fragment" app:destination="@id/notify_fragment" />
 
 </navigation>
