--- a/app/src/main/res/navigation/nav_home_graph.xml
+++ b/app/src/main/res/navigation/nav_home_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/home"
-        android:name="com.example.myandroidproject.customer.fragments.HomeFragment"
+        android:name="com.example.myandroidproject.customer.fragments.ShowroomFragment"
         android:label="fragment_nav_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_showroom" >
     </fragment>
 
     <fragment
