--- a/app/src/main/res/layout/activity_detail_item.xml
+++ b/app/src/main/res/layout/activity_detail_item.xml
@@ -18,18 +18,20 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/img_item"
+                    android:id="@+id/imageVehicle"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:srcCompat="@mipmap/fav_icon_round"
-                    tools:layout_editor_absoluteX="-16dp" />
+                    tools:layout_editor_absoluteX="0dp" />
+
                 <ImageView
                     android:id="@+id/back_evtt"
                     android:layout_width="58dp"
@@ -117,25 +119,6 @@
                     app:layout_constraintStart_toEndOf="@+id/ratingBar"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.421" />
-
-                <ImageView
-                    android:id="@+id/timeLogo"
-                    android:layout_width="34dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/time_icon_foreground"
-                    tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="346dp"
-                    tools:layout_editor_absoluteY="8dp" />
-
-                <TextView
-                    android:id="@+id/timeTxt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="15 min"
-                    tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="308dp"
-                    tools:layout_editor_absoluteY="16dp" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
@@ -174,7 +157,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/modelTitle"
+                    android:id="@+id/brandTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Hãng xe: "
@@ -183,7 +166,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/model"
+                    android:id="@+id/brandValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Mercedes"
@@ -301,50 +284,6 @@
 
 
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/quantityTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Quantity: "
-                    android:textColor="@color/Black"
-                    android:textSize="15sp"
-                    android:textStyle="bold" />
-
-                <ImageView
-                    android:id="@+id/minus"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@mipmap/minus_icon_foreground"
-                    tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="346dp"
-                    tools:layout_editor_absoluteY="8dp" />
-
-                <TextView
-                    android:id="@+id/quantity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginEnd="20dp"
-                    android:text="1" />
-
-                <ImageView
-                    android:id="@+id/plus"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:src="@mipmap/minus_icon_foreground"
-                    tools:ignore="MissingConstraints"
-                    tools:layout_editor_absoluteX="346dp"
-                    tools:layout_editor_absoluteY="8dp" />
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
@@ -352,8 +291,9 @@
         android:layout_width="0dp"
         android:layout_height="75dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
         android:background="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -361,43 +301,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2">
 
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/rental"
-            style="@android:style/Widget.Button"
-            android:layout_width="120dp"
+        <Button
+            android:id="@+id/rentButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#4CAF50"
-            android:clickable="true"
-            android:focusable="true"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="Thuê"
-            android:textColor="@color/White"
-            android:textSize="20sp"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="259dp"
-            tools:layout_editor_absoluteY="16dp" />
-        <TextView
-            android:id="@+id/totalPriceTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tổng tiền: "
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteY="30dp"
-            android:textColor="@color/Black"
-            android:textSize="15sp"
-            android:textStyle="bold"/>
-        <TextView
-            android:id="@+id/totalPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="841.500 VNĐ"
-            tools:layout_editor_absoluteX="82dp"
-            tools:layout_editor_absoluteY="30dp"
-            tools:ignore="MissingConstraints"
-            android:textColor="@color/Black"
-            android:textSize="15sp"
-            android:textStyle="bold"/>
+            android:layout_alignParentBottom="true"
+            android:backgroundTint="@color/notYellow"
+            android:padding="12dp"
+            android:text="Rent Now"
+            android:textColor="@android:color/white"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
