--- a/app/src/main/res/navigation/nav_home_graph.xml
+++ b/app/src/main/res/navigation/nav_home_graph.xml
@@ -29,6 +29,6 @@
     <action android:id="@+id/action_global_home" app:destination="@id/home" />
     <action android:id="@+id/in4_personal" app:destination="@id/in4" />
     <action android:id="@+id/action_global_support_fragment" app:destination="@id/support_fragment" />
-
+    <action android:id="@+id/action_global_fragment_chat_customer" app:destination="@id/home" />
 
 </navigation>
