--- a/app/src/main/res/layout/nav_header_admin.xml
+++ b/app/src/main/res/layout/nav_header_admin.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     android:divider="@null"
     android:showDividers="none"
+    android:padding="20dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
