--- a/app/src/main/res/navigation/nav_home_admin_graph.xml
+++ b/app/src/main/res/navigation/nav_home_admin_graph.xml
@@ -9,14 +9,14 @@
         android:id="@+id/home_admin"
         android:name="com.example.myandroidproject.admin.fragments.HomeFragment"
         android:label="fragment_nav_home"
-        tools:layout="@layout/fragment_home" >
-    </fragment>
+        tools:layout="@layout/fragment_home" />
 
-    <action android:id="@+id/action_global_home_admin" app:destination="@id/home_admin" />
     <fragment
         android:id="@+id/chat_admin"
         android:name="com.example.myandroidproject.admin.fragments.ChatFragment"
         android:label="ChatFragment" />
+
+    <action android:id="@+id/action_global_home_admin" app:destination="@id/home_admin" />
     <action android:id="@+id/action_global_chat_admin" app:destination="@id/chat_admin" />
 
 </navigation>
