--- a/app/src/main/res/navigation/nav_home_admin_graph.xml
+++ b/app/src/main/res/navigation/nav_home_admin_graph.xml
@@ -8,13 +8,12 @@
     <fragment
         android:id="@+id/home_admin"
         android:name="com.example.myandroidproject.admin.fragments.HomeFragment"
-        android:label="fragment_nav_home"
-        tools:layout="@layout/fragment_home" />
+        android:label="Home" />
 
     <fragment
         android:id="@+id/chat_admin"
         android:name="com.example.myandroidproject.admin.fragments.ChatFragment"
-        android:label="ChatFragment" />
+        android:label="Chat" />
 
     <action android:id="@+id/action_global_home_admin" app:destination="@id/home_admin" />
     <action android:id="@+id/action_global_chat_admin" app:destination="@id/chat_admin" />
