--- a/app/src/main/res/layout/activity_my_license.xml
+++ b/app/src/main/res/layout/activity_my_license.xml
@@ -37,8 +37,21 @@
         android:layout_marginTop="12dp"
         android:text="Capture Image"
         app:layout_constraintEnd_toEndOf="@+id/ivLicenseImage"
-        app:layout_constraintHorizontal_bias="0.482"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ivLicenseImage"
+        app:layout_constraintTop_toBottomOf="@+id/ivLicenseImage" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="chooseFile"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.812"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivLicenseImage" />
 
     <TextView
@@ -52,6 +65,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivLicenseImage" />
+
 
     <TextView
         android:id="@+id/readMe"
