--- a/app/src/main/res/layout/item_cardview_vehicle.xml
+++ b/app/src/main/res/layout/item_cardview_vehicle.xml
@@ -16,7 +16,8 @@
             android:gravity="top"
             android:orientation="vertical"
             tools:layout_editor_absoluteX="20dp"
-            tools:layout_editor_absoluteY="20dp">
+            tools:layout_editor_absoluteY="20dp"
+            tools:ignore="MissingConstraints">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
