--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -82,12 +82,15 @@
         android:textColor="@android:color/black"
         android:textSize="18sp" />
 
+
     <EditText
         android:id="@+id/etBirthday"
         android:layout_width="match_parent"
         android:layout_height="62dp"
         android:layout_marginBottom="16dp"
-        android:hint="YYYY-MM-DD"
+        android:clickable="true"
+        android:focusable="false"
+        android:hint="DD/MM/YYYY"
         android:padding="10dp"
         android:textColor="@android:color/black"
         android:textSize="18sp" />
