--- a/app/src/main/res/layout/activity_my_account.xml
+++ b/app/src/main/res/layout/activity_my_account.xml
@@ -7,14 +7,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@android:color/white"
+    android:background="@color/xam"
     tools:context=".customer.activities.MyAccount">
 
     <LinearLayout
         android:id="@+id/headerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/Green"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingTop="32dp"
@@ -24,13 +23,23 @@
             android:id="@+id/userNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="Thông Tin Cá Nhân"
-            android:textColor="@color/White"
+            android:textColor="@color/notYellow"
             android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
-
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-20dp"
+        app:cardCornerRadius="28dp"
+        android:alpha="0.9">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="28dp">
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -45,6 +54,9 @@
             android:textSize="12sp"  />
     </com.google.android.material.textfield.TextInputLayout>
 
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="15dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -60,6 +72,9 @@
             android:textSize="12sp"  />
     </com.google.android.material.textfield.TextInputLayout>
 
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="15dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -75,10 +90,13 @@
             android:textSize="12sp"  />
     </com.google.android.material.textfield.TextInputLayout>
 
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="15dp" />
 
     <RadioGroup
         android:id="@+id/radioGenderGroup"
-        android:layout_width="381dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -88,6 +106,10 @@
             android:layout_height="wrap_content"
             android:text="Nam" />
 
+        <View
+            android:layout_width="76dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
         <RadioButton
             android:id="@+id/radioFemale"
             android:layout_width="125dp"
@@ -95,6 +117,9 @@
             android:text="Nữ" />
     </RadioGroup>
 
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="15dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -110,6 +135,10 @@
             android:textSize="12sp"  />
     </com.google.android.material.textfield.TextInputLayout>
 
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="15dp" />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -119,18 +148,25 @@
             android:id="@+id/etBirthday"
             android:layout_width="match_parent"
             android:layout_height="56dp"
+            android:clickable="true"
+            android:cursorVisible="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:hint="Birthday"
-            android:inputType="date"
+            android:inputType="none"
             android:textSize="12sp" />
     </com.google.android.material.textfield.TextInputLayout>
-
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="15dp" />
     <Button
         android:id="@+id/btnSave"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="12dp"
         android:text="Save"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:padding="12dp"/>
-
+        android:textSize="18sp" />
+</LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
