--- a/app/src/main/res/layout/activity_shipper.xml
+++ b/app/src/main/res/layout/activity_shipper.xml
@@ -7,4 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".shipper.activites.ShipperActivity">
 
+    <Button
+        android:id="@+id/showMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Map Show"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="288dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
