Home + Search, Search as Fragment, nav_home_graph.xml got update

--- a/app/src/main/res/layout/activity_admin_header_main.xml
+++ b/app/src/main/res/layout/activity_admin_header_main.xml
@@ -13,12 +13,14 @@
     android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.DayNight">
 
+<!--    CurrentUserImage-->
     <ImageView
         android:id="@+id/nav_header_imageView"
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:src="@mipmap/ic_launcher" />
 
+<!--    Name-->
     <TextView
         android:id="@+id/nav_header_textView"
         android:layout_width="match_parent"
