--- a/app/src/main/res/layout/activity_showroom.xml
+++ b/app/src/main/res/layout/activity_showroom.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="12dp"
-    tools:context=".customer.activities.ShowroomActivity">
+    tools:context=".customer.fragments.ShowroomSearchFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -90,20 +90,12 @@
                         android:id="@+id/listViewVehicle"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </LinearLayout>
         </ScrollView>
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/navbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:backgroundTint="@color/notYellow"
-            style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
-            app:labelVisibilityMode="labeled"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/menu_bottom" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
