--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -26,9 +26,7 @@
 
                 <Button
                     android:id="@+id/button"
-                    style="?attr/materialButtonOutlinedStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    style="@style/PrimaryOutlineButton"
                     android:drawableLeft="@drawable/baseline_menu_24"
                     android:text="LMAO"
                     android:textSize="0sp"
@@ -36,9 +34,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView9"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:rippleColor="@color/notYellow"
-                    app:strokeColor="@color/notYellow" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <View
                     android:layout_width="match_parent"
