--- a/app/src/main/res/layout/logout_dialog.xml
+++ b/app/src/main/res/layout/logout_dialog.xml
@@ -2,46 +2,45 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/xam"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:gravity="center">
 
     <TextView
         android:id="@+id/txt_dia"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Do you realy want to exit ?"
-        android:textColor="@color/White"
+        android:text="Bạn có muốn đăng xuất không?"
+        android:padding="10dp"
         android:textSize="15sp"
         android:textStyle="bold"/>
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="#3E80B4"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/btn_yes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@color/White"
-            android:clickable="true"
-            android:text="Yes"
-            android:textColor="@color/Dark"
-            android:textStyle="bold" />
+        android:orientation="horizontal"
+        android:gravity="end">
 
         <Button
             android:id="@+id/btn_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:background="@color/notYellow"
+            android:backgroundTint="@color/notYellow"
             android:clickable="true"
             android:text="No"
             android:textColor="@color/Black"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/btn_yes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:text="Yes"
+            android:textColor="@color/Dark"
             android:textStyle="bold" />
     </LinearLayout>
 
