--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/home"
+        android:id="@+id/customer_home"
         android:title="Home"
         android:icon="@drawable/baseline_home_24"/>
     <item
-        android:id="@+id/car"
+        android:id="@+id/customer_trip"
         android:title="Trip"
         android:icon="@drawable/baseline_directions_car_24"/>
     <item
-        android:id="@+id/notify"
+        android:id="@+id/customer_notify"
         android:title="Notify"
         android:icon="@drawable/baseline_circle_notifications_24"/>
     <item
-        android:id="@+id/support"
+        android:id="@+id/customer_support"
         android:title="Support"
         android:icon="@drawable/baseline_home_24"/>
     <item
-        android:id="@+id/user"
+        android:id="@+id/customer_user"
         android:title="User"
         android:icon="@drawable/baseline_account_circle_24"/>
 </menu>
