--- a/app/src/main/res/navigation/nav_admin_graph.xml
+++ b/app/src/main/res/navigation/nav_admin_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_admin_graph"
-    app:startDestination="@id/home">
+    app:startDestination="@id/customer_home">
 
 
     <fragment
-        android:id="@+id/home"
+        android:id="@+id/customer_home"
         android:name="com.example.myandroidproject.admin.fragment.AdminUserFragment"
         android:label="fragment_nav_home"
         tools:layout="@layout/fragment_admin_user" >
@@ -20,7 +20,7 @@
         tools:layout="@layout/fragment_admin_vehicle" >
     </fragment>
 
-    <action android:id="@+id/action_admin_user" app:destination="@id/home" />
+    <action android:id="@+id/action_admin_user" app:destination="@id/customer_home" />
     <action android:id="@+id/action_admin_vehicle" app:destination="@id/vehicle" />
 
 </navigation>
