--- a/app/src/main/res/layout/fragment_showroom.xml
+++ b/app/src/main/res/layout/fragment_showroom.xml
@@ -28,7 +28,7 @@
                 android:src="@drawable/logo_rental"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/searchView"
+                app:layout_constraintEnd_toStartOf="@id/searchBtn"
                 app:layout_constraintVertical_weight="1" />
 
             <Button
