--- a/app/src/main/res/layout/fragment_admin_user.xml
+++ b/app/src/main/res/layout/fragment_admin_user.xml
@@ -10,7 +10,7 @@
     <!-- TODO: Update blank fragment layout -->
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:cardCornerRadius="20dp">
 
         <LinearLayout
@@ -24,6 +24,18 @@
                 android:layout_height="match_parent"
                 android:text="@string/user_keyword"
                 android:textSize="24dp"/>
+
+            <RelativeLayout
+                android:id="@+id/loadingPanel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center" >
+
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="true" />
+            </RelativeLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/admin_user_container"
