--- a/app/src/main/res/layout/fragment_user_item.xml
+++ b/app/src/main/res/layout/fragment_user_item.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".UserItemFragment"
-    android:background="@drawable/border_background">
+    tools:context=".UserItemFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginVertical="10dp"
         android:weightSum="8"
         android:gravity="center_vertical"
         android:clickable="true"
