--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -58,7 +58,7 @@
                     android:textColor="@color/Black" />
             </LinearLayout>
             <Button
-                android:id="@+id/searchView"
+                android:id="@+id/searchBtn"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
@@ -119,7 +119,7 @@
             app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/searchView">
+            app:layout_constraintTop_toBottomOf="@id/searchBtn">
 
             <LinearLayout
                 android:layout_width="match_parent"
