--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="xam">#5e5e5e</color>
     <color name="Dark">#010101</color>
     <color name="notYellow">#d3bc67</color>
+    <color name="aquafina">#4287f5</color>
 
     <color name="circle_color_border">#5e5e5e</color>
     <color name="circle_notify_color_border">#7F7F7F</color>
