--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,10 +26,10 @@
                 android:orientation="horizontal">
 
 
-                <Button
+                <ImageView
                     android:id="@+id/button"
                     style="@style/PrimaryOutlineButton"
-                    android:drawableLeft="@drawable/baseline_menu_24"
+                    android:src="@drawable/baseline_menu_24"
                     android:text="LMAO"
                     android:textSize="0sp"
                     android:textColor="@color/Dark"
