--- a/app/src/main/res/layout/fragment_chat_admin.xml
+++ b/app/src/main/res/layout/fragment_chat_admin.xml
@@ -5,10 +5,10 @@
     app:layout_constraintRight_toRightOf="parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".customer.fragments.ChatFragment">
+    tools:context=".admin.fragment.AdminChatFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/chat_header"
+        android:id="@+id/chat_header_admin"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/notYellow"
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/chat_icon"
+            android:id="@+id/chat_icon_admin"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@drawable/message"
@@ -34,10 +34,10 @@
             android:textColor="@color/White"
             android:textFontWeight="600"
             android:textSize="35sp"
-            app:layout_constraintLeft_toRightOf="@+id/chat_icon" />
+            app:layout_constraintLeft_toRightOf="@+id/chat_icon_admin" />
 
         <ImageView
-            android:id="@+id/chatExitBtn"
+            android:id="@+id/chatExitBtnAdmin"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/baseline_exit_to_app_24"
@@ -51,22 +51,22 @@
         android:divider="@null"
         android:dividerHeight="5dp"
         android:padding="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/chat_header"
-        android:id="@+id/customer_chat_recycleview"
+        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutAdmin"
+        app:layout_constraintTop_toBottomOf="@+id/chat_header_admin"
+        android:id="@+id/admin_chat_recycleview"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:id="@+id/textInputLayoutAdmin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/sendBtn"
+        app:layout_constraintEnd_toStartOf="@+id/sendBtnAdmin"
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/messageInput"
+            android:id="@+id/messageInputAdmin"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:padding="0dp"
@@ -79,7 +79,7 @@
         android:textColor="@color/White"
         android:gravity="center"
         android:background="@color/notYellow"
-        android:id="@+id/sendBtn"
+        android:id="@+id/sendBtnAdmin"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:paddingLeft="20dp"
