--- a/app/src/main/res/layout/fragment_support.xml
+++ b/app/src/main/res/layout/fragment_support.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -9,6 +8,8 @@
     android:paddingLeft="0dp"
     android:paddingRight="0dp"
     android:background="@color/White">
+
+
 
     <ScrollView
         android:id="@+id/scrollView2"
@@ -57,6 +58,7 @@
                         android:orientation="horizontal">
 
                         <LinearLayout
+                            android:id="@+id/callBtn"
                             android:layout_width="match_parent"
                             android:layout_height="32dp"
                             android:layout_weight="0.5"
@@ -87,6 +89,7 @@
                             android:layout_weight="0" />
 
                         <LinearLayout
+                            android:id="@+id/msgBtn"
                             android:layout_width="match_parent"
                             android:layout_height="32dp"
                             android:layout_weight="0.5"
