--- a/app/src/main/res/navigation/nav_admin_graph.xml
+++ b/app/src/main/res/navigation/nav_admin_graph.xml
@@ -5,7 +5,6 @@
     android:id="@+id/nav_admin_graph"
     app:startDestination="@id/admin_user">
 
-
     <fragment
         android:id="@+id/admin_user"
         android:name="com.example.myandroidproject.admin.fragment.AdminUserFragment"
@@ -26,5 +25,18 @@
         android:label="fragment_admin_order"
         tools:layout="@layout/fragment_admin_order" />
 
+    <fragment
+        android:id="@+id/admin_chat_storage"
+        android:name="com.example.myandroidproject.admin.fragment.AdminChatStorageFragment"
+        android:label="fragment_admin_order"
+        tools:layout="@layout/fragment_admin_chat_storage" />
+
+    <fragment
+        android:id="@+id/admin_chat"
+        android:name="com.example.myandroidproject.admin.fragment.AdminChatFragment"
+        android:label="fragment_admin_chat"
+        tools:layout="@layout/fragment_chat_admin" />
+    <action android:id="@+id/action_global_admin_chat" app:destination="@id/admin_chat" />
+    <action android:id="@+id/fragment_admin_chat_storage" app:destination="@id/admin_chat_storage"/>
 
 </navigation>
