--- a/app/src/main/res/layout/activity_admin_header_main.xml
+++ b/app/src/main/res/layout/activity_admin_header_main.xml
@@ -26,6 +26,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
-        android:text="Chike Mgbemena"
+        android:text="Currently login as: unknown"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 </LinearLayout>
