--- a/app/src/main/res/layout/fragment_admin_user_detail.xml
+++ b/app/src/main/res/layout/fragment_admin_user_detail.xml
@@ -1,150 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".admin.fragment.AdminUserDetailFragment">
 
-    <LinearLayout
-        android:id="@+id/headerLayout"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/Green"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:paddingTop="32dp"
-        android:paddingBottom="16dp">
+        android:layout_height="match_parent"
+        app:cardCornerRadius="20dp">
 
-        <TextView
-            android:id="@+id/userNameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Thông Tin Cá Nhân"
-            android:textColor="@color/White"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-    </LinearLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etFirstname"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:autofillHints="name"
-            android:hint="First Name"
-            android:inputType="text"
-            android:textSize="12sp" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="start|center_vertical"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/backBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Back" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="10dp"
+                        android:text="Thông tin người dùng"
+                        android:textSize="18dp" />
+
+                </LinearLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etFirstname"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:autofillHints="name"
+                        android:hint="First Name"
+                        android:inputType="text"
+                        android:textSize="12sp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etLastname"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:autofillHints="name"
-            android:hint="Last Name"
-            android:inputType="text"
-            android:textSize="12sp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPhone"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:autofillHints="name"
-            android:hint="Phone Num"
-            android:inputType="text"
-            android:textSize="12sp" />
-    </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etLastname"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:autofillHints="name"
+                        android:hint="Last Name"
+                        android:inputType="text"
+                        android:textSize="12sp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-    <RadioGroup
-        android:id="@+id/radioGenderGroup"
-        android:layout_width="381dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-        <RadioButton
-            android:id="@+id/radioMale"
-            android:layout_width="135dp"
-            android:layout_height="wrap_content"
-            android:text="Nam" />
-
-        <RadioButton
-            android:id="@+id/radioFemale"
-            android:layout_width="125dp"
-            android:layout_height="wrap_content"
-            android:text="Nữ" />
-    </RadioGroup>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etPhone"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:autofillHints="name"
+                        android:hint="Phone Num"
+                        android:inputType="text"
+                        android:textSize="12sp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                <RadioGroup
+                    android:id="@+id/radioGenderGroup"
+                    android:layout_width="381dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etEmail"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:autofillHints="emailAddress"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress"
-            android:textSize="12sp" />
-    </com.google.android.material.textfield.TextInputLayout>
+                    <RadioButton
+                        android:id="@+id/radioMale"
+                        android:layout_width="135dp"
+                        android:layout_height="wrap_content"
+                        android:text="Nam" />
+
+                    <RadioButton
+                        android:id="@+id/radioFemale"
+                        android:layout_width="125dp"
+                        android:layout_height="wrap_content"
+                        android:text="Nữ" />
+                </RadioGroup>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etBirthday"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:hint="Birthday"
-            android:inputType="date"
-            android:textSize="12sp" />
-    </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etEmail"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:autofillHints="emailAddress"
+                        android:hint="@string/email"
+                        android:inputType="textEmailAddress"
+                        android:textSize="12sp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-    <GridLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:rowCount="1"
-        android:columnCount="2"
-        android:layout_gravity="center">
 
-        <Button
-            android:id="@+id/btnSave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="12dp"
-            android:text="Save"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:layout_columnWeight="1"/>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/backBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Back"
-            android:textSize="18sp"
-            android:padding="12dp"
-            android:layout_columnWeight="1" />
-    </GridLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etBirthday"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:hint="Birthday"
+                        android:inputType="date"
+                        android:textSize="12sp" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-</LinearLayout>
+                <GridLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:columnCount="2"
+                    android:rowCount="1">
+
+                    <Button
+                        android:id="@+id/btnSave"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_columnWeight="1"
+                        android:padding="12dp"
+                        android:text="Save"
+                        android:textColor="@android:color/white"
+                        android:textSize="18sp" />
+                </GridLayout>
+
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/loadingPanel"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#80FFFFFF"
+                android:gravity="center">
+
+                <ProgressBar
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:indeterminate="true" />
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+
+
+    </androidx.cardview.widget.CardView>
+
+
+
+
+</FrameLayout>
