--- a/app/src/main/res/navigation/nav_admin_graph.xml
+++ b/app/src/main/res/navigation/nav_admin_graph.xml
@@ -33,7 +33,7 @@
 
     <fragment
         android:id="@+id/adminUserDetailFragment"
-        android:name="com.example.myandroidproject.AdminUserDetailFragment"
+        android:name="com.example.myandroidproject.admin.fragment.AdminUserDetailFragment"
         android:label="fragment_admin_user_detail"
         tools:layout="@layout/fragment_admin_user_detail" >
         <action
